--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  get: ^4.6.1
+  provider: ^6.0.1
+  shared_preferences: ^2.0.11
+  flutter_speed_dial: ^5.0.0+1
+  animate_icons: ^2.0.0
 
 dev_dependencies:
   flutter_test:
